Add header 1 cell to notebook

--- a/Random-Numbers.ipynb
+++ b/Random-Numbers.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We occasionally need to generate random numbers.  One common usage is to create a random sample of records in a table.  The examples below show ways to do that in SAS and Oracle.  There are, of course, many other ways to generate random numbers in SAS."
+    "# Random Numbers in SAS and Oracle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We occasionally need to generate random numbers.  One common usage is to create a random sample of records in a table.  The examples below show ways to do that in SAS and Oracle.  There are, of course, many other ways to generate random numbers in SAS.  A Google search will quickly find standard methods for creating exact or approximate size random samples with or without replacement."
    ]
   },
   {
