--- a/JupyterPaper.ipynb
+++ b/JupyterPaper.ipynb
@@ -338,7 +338,7 @@
    "source": [
     "### Git version control support\n",
     "\n",
-    "I don't have Git on this machine, but this extension works well on a machine that does."
+    "I don't have Git on this machine, but this extension works well on a machine that does.  See https://github.com/jupyterlab/jupyterlab-git for an example in the form of an animated GIF."
    ]
   },
   {
@@ -561,7 +561,9 @@
     "\n",
     "- Keyboard assignments are different from those in SAS for Windows or SAS Studio, and you will have to learn them, or reassign them, or use the Menu or Command Palette.\n",
     "\n",
-    "- Jupyter supports only one kind of output per code cell.  SAS has two different kinds of output - log and list/results, but you can get only one of them to display automatically.  See Appendix 1 for an example."
+    "- Jupyter supports only one kind of output per code cell.  SAS has two different kinds of output - log and list/results, but you can get only one of them to display automatically.  See Appendix 1 for an example.\n",
+    "\n",
+    "- Jupyter is open source software, which means that the documentation is whatever someone feels like writing.  "
    ]
   },
   {
@@ -3409,6 +3411,7 @@
   }
  ],
  "metadata": {
+  "EXP_DICT": {},
   "kernelspec": {
    "display_name": "SAS",
    "language": "sas",
