Post-WUSS updates

--- a/Random-Numbers.ipynb
+++ b/Random-Numbers.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Random Numbers in SAS and Oracle \n",
+    "\n",
     "We occasionally need to generate random numbers.  One common usage is to create a random sample of records in a table.  The examples below show ways to do that in SAS and Oracle.  There are, of course, many other ways to generate random numbers in SAS."
    ]
   },
@@ -2591,6 +2593,7 @@
   }
  ],
  "metadata": {
+  "EXP_DICT": {},
   "kernelspec": {
    "display_name": "SAS",
    "language": "sas",
