--- a/magic-examples.ipynb
+++ b/magic-examples.ipynb
@@ -2,15 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello\n",
-      "\n"
+      "hello\n"
      ]
     }
    ],
@@ -20,17 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SAS Connection established. Subprocess id is 13328\n",
-      "\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -103,7 +94,7 @@
        "<h2></h2>\n",
        "\n",
        "<div class=\"highlight\"><pre><span></span>\f",
-       "<span class=\"err\">4</span> <span class=\"err\">The</span> <span class=\"err\">SAS</span> <span class=\"err\">System</span>                                                                                                                                                                                                                 <span class=\"err\">11:23</span> <span class=\"err\">Thursday,</span> <span class=\"err\">August</span> <span class=\"err\">29,</span> <span class=\"err\">2019</span><br><br><span class=\"s\">29         ods listing close;ods html5 (id=saspy_internal) file=_tomods1 options(bitmap_mode=&#39;inline&#39;) device=svg style=HTMLBlue; ods graphics on / outputfmt=png;</span><br><span class=\"cm\">NOTE: Writing HTML5(SASPY_INTERNAL) Body file: _TOMODS1</span><br><span class=\"s\">30         </span><br><span class=\"s\">31         /* */</span><br><span class=\"s\">32         %put _user_;</span><br><span class=\"err\">GLOBAL</span> <span class=\"err\">DOR_SHARED_LIBRARY_PATH</span> <span class=\"err\">&#39;/sam1/sasg_project/adhoc/dor/shared/SASFormats/</span> <span class=\"err\">&#39;</span> <span class=\"err\">&#39;/sam1/sasg_project/adhoc/dor/data-dor/shared/SASFormats/&#39;</span> <span class=\"err\">&#39;/sam1/sasg_project/adhoc/dor/rsch/shared/SASFormats/&#39;</span><br><span class=\"err\">GLOBAL</span> <span class=\"err\">DOR_USE_TEST_MACROS</span> <span class=\"err\">1</span><br><span class=\"err\">GLOBAL</span> <span class=\"err\">SYSDBMSG</span> <br><span class=\"err\">GLOBAL</span> <span class=\"err\">SYSDBRC</span> <span class=\"err\">0</span><br><span class=\"err\">GLOBAL</span> <span class=\"err\">_METAUSER</span> <span class=\"err\">c449630</span><br><span class=\"s\">33         </span><br><span class=\"s\">34         </span><br><span class=\"s\">35         ods html5 (id=saspy_internal) close;ods listing;</span><br><span class=\"s\">36         </span><br></pre></div>\n",
+       "<span class=\"err\">9</span> <span class=\"err\">The</span> <span class=\"err\">SAS</span> <span class=\"err\">System</span>                                                                                                      <span class=\"err\">21:57</span> <span class=\"err\">Monday,</span> <span class=\"err\">September</span> <span class=\"err\">16,</span> <span class=\"err\">2019</span><br><br><span class=\"s\">86         ods listing close;ods html5 (id=saspy_internal) file=_tomods1 options(bitmap_mode=&#39;inline&#39;) device=svg style=HTMLBlue; ods graphics on /</span><br><span class=\"s\">86       ! outputfmt=png;</span><br><span class=\"cm\">NOTE: Writing HTML5(SASPY_INTERNAL) Body file: _TOMODS1</span><br><span class=\"s\">87         </span><br><span class=\"s\">88         /* */</span><br><span class=\"s\">89         %put _user_;</span><br><span class=\"err\">GLOBAL</span> <span class=\"err\">DOR_SHARED_LIBRARY_PATH</span> <span class=\"err\">&#39;/sam1/sasg_project/adhoc/dor/shared/SASFormats/</span> <span class=\"err\">&#39;</span> <span class=\"err\">&#39;/sam1/sasg_project/adhoc/dor/data-dor/shared/SASFormats/&#39;</span> <br><span class=\"err\">&#39;/sam1/sasg_project/adhoc/dor/rsch/shared/SASFormats/&#39;</span><br><span class=\"err\">GLOBAL</span> <span class=\"err\">DOR_USE_TEST_MACROS</span> <span class=\"err\">1</span><br><span class=\"err\">GLOBAL</span> <span class=\"err\">SYSDBMSG</span> <br><span class=\"err\">GLOBAL</span> <span class=\"err\">SYSDBRC</span> <span class=\"err\">0</span><br><span class=\"err\">GLOBAL</span> <span class=\"err\">_METAUSER</span> <span class=\"err\">c449630</span><br><span class=\"s\">90         </span><br><span class=\"s\">91         </span><br><span class=\"s\">92         </span><br><span class=\"s\">93         ods html5 (id=saspy_internal) close;ods listing;</span><br><span class=\"s\">94         </span><br></pre></div>\n",
        "</body>\n",
        "</html>\n"
       ],
@@ -111,7 +102,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,12 +127,12 @@
    "outputs": [],
    "source": [
     "/* */\n",
-    "%put _user_;"
+    "%put _user_;\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +232,7 @@
        "<h2></h2>\n",
        "\n",
        "<div class=\"highlight\"><pre><span></span>\f",
-       "<span class=\"err\">7</span> <span class=\"err\">The</span> <span class=\"err\">SAS</span> <span class=\"err\">System</span>                                                                                                                                                                                                                 <span class=\"err\">11:26</span> <span class=\"err\">Thursday,</span> <span class=\"err\">August</span> <span class=\"err\">29,</span> <span class=\"err\">2019</span><br><br><span class=\"s\">59         ods listing close;ods html5 (id=saspy_internal) file=_tomods1 options(bitmap_mode=&#39;inline&#39;) device=svg style=HTMLBlue; ods graphics on / outputfmt=png;</span><br><span class=\"cm\">NOTE: Writing HTML5(SASPY_INTERNAL) Body file: _TOMODS1</span><br><span class=\"s\">60         </span><br><span class=\"s\">61             %put hello ;</span><br><span class=\"err\">hello</span><br><span class=\"s\">62         %mend hello;</span><br><span class=\"k k-Multiline\">ERROR: No matching %MACRO statement for this %MEND statement.</span><br><span class=\"s\">63         </span><br><span class=\"s\">64         %macro hello;</span><br><span class=\"s\">65             %put hello ;</span><br><span class=\"s\">66         %mend hello;</span><br><span class=\"s\">67         </span><br><span class=\"s\">68         ods html5 (id=saspy_internal) close;ods listing;</span><br><span class=\"s\">69         </span><br></pre></div>\n",
+       "<span class=\"err\">6</span> <span class=\"err\">The</span> <span class=\"err\">SAS</span> <span class=\"err\">System</span>                                                                                                      <span class=\"err\">21:55</span> <span class=\"err\">Monday,</span> <span class=\"err\">September</span> <span class=\"err\">16,</span> <span class=\"err\">2019</span><br><br><span class=\"s\">50         ods listing close;ods html5 (id=saspy_internal) file=_tomods1 options(bitmap_mode=&#39;inline&#39;) device=svg style=HTMLBlue; ods graphics on /</span><br><span class=\"s\">50       ! outputfmt=png;</span><br><span class=\"cm\">NOTE: Writing HTML5(SASPY_INTERNAL) Body file: _TOMODS1</span><br><span class=\"s\">51         </span><br><span class=\"s\">52             %put hello ;</span><br><span class=\"err\">hello</span><br><span class=\"s\">53         %mend hello;</span><br><span class=\"k k-Multiline\">ERROR: No matching %MACRO statement for this %MEND statement.</span><br><span class=\"s\">54         </span><br><span class=\"s\">55         %macro hello;</span><br><span class=\"s\">56             %put hello ;</span><br><span class=\"s\">57         %mend hello;</span><br><span class=\"s\">58         </span><br><span class=\"s\">59         ods html5 (id=saspy_internal) close;ods listing;</span><br><span class=\"s\">60         </span><br></pre></div>\n",
        "</body>\n",
        "</html>\n"
       ],
@@ -249,7 +240,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
